# clardio

./: .gitignore  CLAUDE.md  README.md  package.json  pyproject.toml
docs/: anthropic-api-plan.md  bluetooth-debug.md  code-review.md  ui-plan.md
public/: index.html
public/js/: client.js
public/mocks/: index.html  layout-a.html  layout-b.html  layout-c.html  meters-a.html  meters-b.html  meters-c.html  meters-d.html
scripts/: screenshot.ts  simulate.sh
src/bluetooth/: sensor-bridge.ts
src/clardio_sensors/: __init__.py
src/client/: countdown.ts  handlers.ts  main.ts  progress.ts  rolling-average.ts  sse-client.ts  ui.ts
src/scripts/: sim.ts
src/server/: coach-prompt.ts  coach.ts  index.ts  log.ts  routes.ts  sensor-process.ts  session.ts  sse.ts  workout.ts
src/shared/: types.ts
tests/: client.test.ts  server.test.ts  session.test.ts  tool-endpoints.test.ts
